@@ -1,4 +1,14 @@
 
+2023-04-13  Simon Sobisch <simonsobisch@gnu.org>
+
+	* intrinsic.c (test_digit, cob_intr_hex_to_char, cob_intr_locale_date,
+	  cob_intr_locale_time), move.c (cob_move_alphanum_to_display,
+	  cob_get_s64_pic9): prefer range check over isdigit for improved speed
+	* numeric.c (cob_decimal_get_packed): use COB_D2I instead of subtracting
+	* intrinsic.c (cob_intr_hex_to_char): minor refactoring for speedup
+	* intrinsic.c (cob_intr_hex_of): rewritten to use hex value table instead
+	  of sprintf, saving around 80% of cpu instructions
+
 2023-04-04  Simon Sobisch <simonsobisch@gnu.org>
 
 	* move.c (cob_move, cob_move_display_to_packed, cob_move_packed_to_display,
